# job-board-aggregator

./: .gitignore  CLAUDE.md  README.md  __init__.py  notifier.py  pyproject.toml  scheduler.py  setup.py
.github/workflows/: publish-pypi.yml
jobhunt/: README.md  cli.py  config.py  db.py  models.py  search.py
jobhunt/scrapers/: __init__.py  arbeitnow.py  base.py  glassdoor.py  indeed.py  linkedin.py  remoteok.py
scrapers/: __init__.py  adzuna.py  themuse.py
